# Open5GS-MME

./: README.md  full-reinstall.sh  meson.build  mme.yaml.example  recompile.sh  tac2natpr.py
configs/: 310014.yaml.in  csfb.yaml.in  non3gpp.yaml.in  sample.yaml.in  slice.yaml.in  srsenb.yaml.in  volte.yaml.in  vonr.yaml.in
configs/open5gs/: mme.yaml.in  sgwc.yaml.in  sgwu.yaml.in  smf.yaml.in
lib/: meson.build
lib/asn1c/s1ap/: S1AP_CauseNas.h
lib/asn1c/sbcap/: SBcAP_Broadcast-Cancelled-Area-List-5GS.c  SBcAP_Broadcast-Cancelled-Area-List-5GS.h  SBcAP_Broadcast-Cancelled-Area-List.c  SBcAP_Broadcast-Cancelled-Area-List.h  SBcAP_Broadcast-Empty-Area-List-5GS.c  SBcAP_Broadcast-Empty-Area-List-5GS.h  SBcAP_Broadcast-Empty-Area-List.c  SBcAP_Broadcast-Empty-Area-List.h  SBcAP_Broadcast-Scheduled-Area-List-5GS.c  SBcAP_Broadcast-Scheduled-Area-List-5GS.h  SBcAP_Broadcast-Scheduled-Area-List.c  SBcAP_Broadcast-Scheduled-Area-List.h  SBcAP_CancelledCellinEAI-Item.c  SBcAP_CancelledCellinEAI-Item.h  SBcAP_CancelledCellinEAI.c  SBcAP_CancelledCellinEAI.h  SBcAP_CancelledCellinTAI-5GS.c  SBcAP_CancelledCellinTAI-5GS.h  SBcAP_CancelledCellinTAI-Item.c  SBcAP_CancelledCellinTAI-Item.h  SBcAP_CancelledCellinTAI.c  SBcAP_CancelledCellinTAI.h  SBcAP_Cause.c  SBcAP_CellID-Cancelled-Item.c  SBcAP_CellID-Cancelled-Item.h  SBcAP_CellID-Cancelled-List-5GS.c  SBcAP_CellID-Cancelled-List-5GS.h  SBcAP_CellID-Cancelled-List.c  SBcAP_CellID-Cancelled-List.h  SBcAP_CellId-Broadcast-List-5GS.c  SBcAP_CellId-Broadcast-List-5GS.h  SBcAP_CellId-Broadcast-List-Item.c  SBcAP_CellId-Broadcast-List-Item.h  SBcAP_CellId-Broadcast-List.c  SBcAP_CellId-Broadcast-List.h  SBcAP_CellIdentity.c  SBcAP_Concurrent-Warning-Message-Indicator.c  SBcAP_Criticality-Diagnostics.c  SBcAP_Criticality-Diagnostics.h  SBcAP_Criticality.c  (+155 more)
lib/core/: ogs-epoll.c  ogs-list.h  ogs-pool.h  ogs-sockaddr.c  ogs-sockaddr.h  ogs-timer.c
lib/dns_resolvers/: Makefile  dns_resolvers.c  dns_resolvers.h  meson.build  naptr.c  naptr.h  ogs-dns-resolvers-logging.h  regex_extensions.c  regex_extensions.h  tests.c
lib/gtp/: context.c  context.h  xact.h
lib/metrics/: context.h
lib/metrics/prometheus/: context.c
lib/metrics/void/: context.c
lib/pfcp/: build.c  context.c  context.h  usage_logger.c  usage_logger.h
lib/proto/: types.c  types.h
lib/redis/: meson.build  ogs-redis.c  ogs-redis.h
lib/sbcap/: build.c  build.h  conv.c  conv.h  meson.build  message.c  message.h  ogs-sbcap.h
lib/sctp/: ogs-sctp.h
src/: main.c
src/mme/: emm-build.c  emm-handler.c  emm-sm.c  esm-handler.c  esm-sm.c  meson.build  metrics.c  metrics.h  mme-context.c  mme-context.h  mme-event.c  mme-event.h  mme-fd-path.c  mme-gtp-path.c  mme-init.c  mme-path.c  mme-path.h  mme-redis.c  mme-redis.h  mme-s11-build.c  mme-s11-handler.c  mme-s6a-handler.c  mme-sm.c  nas-path.c  s1ap-build.c  s1ap-build.h  s1ap-handler.c  s1ap-path.c  sbcap-build.c  sbcap-build.h  sbcap-handler.c  sbcap-handler.h  sbcap-path.c  sbcap-path.h  sbcap-sctp.c  sgsap-build.c  sgsap-handler.c  sgsap-path.c  sgsap-sctp.c
src/sgwc/: context.c  context.h  gtp-path.c  gtp-path.h  init.c  meson.build  metrics.c  metrics.h  pfcp-path.c  s11-build.c  s11-build.h  s11-handler.c  s5c-handler.c  sxa-build.c  sxa-handler.c
src/sgwu/: context.c  context.h  gtp-path.c  init.c  meson.build  metrics.c  metrics.h  pfcp-path.c  sxa-build.c  sxa-build.h  sxa-handler.c
src/smf/: context.c  context.h  gn-build.c  gsm-build.c  gsm-sm.c  gtp-path.c  gx-path.c  init.c  meson.build  n4-handler.c  s5c-build.c  smf-redis.c  smf-redis.h  smf-sm.c
src/upf/: gtp-path.c  pfcp-sm.c
subprojects/: freeDiameter.wrap
tests/csfb/: mo-idle-test.c
